<resources>
    <string name="app_name">FinalProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="open_datepicker">Open DatePicker</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="destination">Destination</string>
    <string name="trip_name">Trip Name</string>
    <string name="update_trip">Update Trip</string>
    <string name="add_trip">Add Trip</string>
</resources>
