<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTripActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextTripName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_name"/>

    <EditText
        android:id="@+id/editTextDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioButtonCityBreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_break"
            android:onClick="radioButtonOnClick"/>
        <RadioButton
            android:id="@+id/radioButtonSeaSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sea_side"
            android:onClick="radioButtonOnClick"/>
        <RadioButton
            android:id="@+id/radioButtonMountains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountains"
            android:onClick="radioButtonOnClick"/>
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBarPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5000"
        android:progress="20" />

    <TextView
        android:id="@+id/textViewPriceSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_startDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:onClick="startDatePickerOnClick"/>

        <TextView
            android:id="@+id/textViewStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_endDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:onClick="endDatePickerOnClick"/>

        <TextView
            android:id="@+id/textViewEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBarTrip"
        style="?android:attr/ratingBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="0.5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_trip"
        android:onClick="editTripToTripsOnClick"/>



</LinearLayout>